--- a/views/paginas/redes.ejs
+++ b/views/paginas/redes.ejs
@@ -18,7 +18,7 @@
                 <a href="https://twitter.com/ChonascomicsHD" target="_blank"><p>ChonascomicsHD</p></a>
             </div>
             <div id="instagram" class="redsocial">
-                <a href="https://www.instagram.com/chonascomics" target="_blank"><img class="logos" src="https://www.edigitalagency.com.au/wp-content/uploads/new-instagram-logo-png-transparent-800x799.png"></a>
+                <a href="https://www.instagram.com/chonascomics" target="_blank"><img class="logos" src="https://i.imgur.com/aXpJCTi.png"></a>
                 <a href="https://www.instagram.com/chonascomics" target="_blank"><p>Chonascomics</p></a>
             </div>  
         </div>
