--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="cabeza">
-        <img class="fotoCara" src="https://i.imgur.com/xUenRUc.jpg">
-        <h1 class="nombre-cara">Ignacio Pesquero Bordón</h1>
+        <img class="fotoCara" src="https://i.imgur.com/2029Zd3.png">
+        <h1 class="nombre-cara">Nintendo franchises</h1>
         <nav class="navegar">
             <ul class="nav-barra">
                 <li class="nav-iconos">
