--- a/views/paginas/chonascomics.ejs
+++ b/views/paginas/chonascomics.ejs
@@ -9,21 +9,21 @@
 <body>
     <main>
         <div class="chonascomics">
-            <img class="logos" src="https://i.imgur.com/EIJVg6K.png" alt="Chonas comics">
-            <p>Recopilaciones de chistes sueltos sobre situaciones de la vida cotidiana, la cual es mostrada de manera 
-                exagerada y absurda. Explora el mundo del anime, el del cine y el de los videojuegos para reírse de ellos. 
-                Todo expresado con un enorme catálogo de personajes de los más extraños y divertidos. Historietas de humor. 
-                Serie 6 tomos auto conclusivos de 100 páginas cada uno.</p>
+            <img class="logos" src="https://i.imgur.com/9gnSnKh.png" alt="super mario">
+            <p>La franquicia de videojuegos más famosa del planeta protagonizando al fontanero que mejor salta. 
+                Juegos que son iconos y diseñaron al mundo de los videojuegos como lo conocemos, muchas veces adelantándose
+                 a su tiempo. Gran calidad de títulos al largo de su historia y no para de caer. Los mejores juegos de
+                  plataformas siempre están acá.</p>
         </div>
         <div class="tomos">
-            <h2>Tomos</h2>
+            <h2>Juegos destacados</h2>
             <ul>
-                <li><a href="https://i.imgur.com/ApmvMU2.jpg" target="blank"><img src="https://i.imgur.com/ApmvMU2.jpg" alt=""></a></li>
-                <li><a href="https://i.imgur.com/rw7Q9RK.jpg" target="blank"><img src="https://i.imgur.com/rw7Q9RK.jpg" alt=""></a></li>
-                <li><a href="https://i.imgur.com/qXddxcq.jpg" target="blank"><img src="https://i.imgur.com/qXddxcq.jpg" alt=""></a></li>
-                <li><a href="https://i.imgur.com/eIlkh8h.jpg" target="blank"><img src="https://i.imgur.com/eIlkh8h.jpg" alt=""></a></li>
-                <li><a href="https://i.imgur.com/FdKB50B.jpg" target="blank"><img src="https://i.imgur.com/FdKB50B.jpg" alt=""></a></li>
-                <li><a href="https://i.imgur.com/nxC8GJw.jpg" target="blank"><img src="https://i.imgur.com/nxC8GJw.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/LW5Rq2k.jpg" target="blank"><img src="https://i.imgur.com/LW5Rq2k.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/wz1mIAC.jpg" target="blank"><img src="https://i.imgur.com/wz1mIAC.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/2IYYk40.jpg" target="blank"><img src="https://i.imgur.com/2IYYk40.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/bV87jjQ.jpg" target="blank"><img src="https://i.imgur.com/bV87jjQ.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/W0UB8Xt.jpg" target="blank"><img src="https://i.imgur.com/W0UB8Xt.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/qbBce8g.jpg" target="blank"><img src="https://i.imgur.com/qbBce8g.jpg" alt=""></a></li>
             </ul>
         </div>
     </main>
