--- a/views/paginas/froggymarket.ejs
+++ b/views/paginas/froggymarket.ejs
@@ -9,17 +9,21 @@
 <body>
     <main>
         <div class="froggymarket">
-            <img class="logos" src="https://i.imgur.com/boOUyhA.png" alt="Froggy Market">
-            <p>Ariel es un joven frustrado por su forma de vida. Posee un deseo enorme de abrirse su propio local 
-                de venta de videojuegos. Sin embargo, tiene un problema personal que no puede superar y le impide cumplir 
-                su deseo: su enorme timidez. Junto con su novia Silvana buscaran una inesperada solución a su problema, 
-                y comenzaran sus peripecias para mantener abierto frente a cualquier crisis su local llamado “Froggy market”. 
-                Pasen y disfruten estas divertidas desventuras. Historieta de humor. Libro auto conclusivo de 20 paginas a color.</p>
+            <img class="logos" src="https://i.imgur.com/wWOSLZX.png" alt="Zelda">
+            <p>La épica franquicia fantástico-medieval que es una leyenda. También creo muchas de las 
+                convenciones que conocemos hoy en día y las damos por sentadas. Siempre busca innovar 
+                concentrándose en pocos conceptos que explota en cada lanzamiento. Posee el mejor juego de 
+                la historia de los videojuegos, indiscutidamente. Mostro la forma de jugar este genero hasta 
+                de que existiera el mismo. </p>
         </div>
         <div class="tomos">
-            <h2>Tomos</h2>
+            <h2>Juegos destacados</h2>
             <ul>
-                <li><a href="https://i.imgur.com/pLsuf4S.jpg" target="blank"><img src="https://i.imgur.com/pLsuf4S.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/8qt1n2I.jpg" target="blank"><img src="https://i.imgur.com/8qt1n2I.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/GWegpGx.jpg" target="blank"><img src="https://i.imgur.com/GWegpGx.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/XrD09jS.jpg" target="blank"><img src="https://i.imgur.com/XrD09jS.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/TjebWgj.jpg" target="blank"><img src="https://i.imgur.com/TjebWgj.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/6asNJ51.jpg" target="blank"><img src="https://i.imgur.com/6asNJ51.jpg" alt=""></a></li>
             </ul>
         </div>
     </main>
