--- a/views/paginas/nxall.ejs
+++ b/views/paginas/nxall.ejs
@@ -9,18 +9,20 @@
 <body>
     <main>
         <div class="nxall">
-            <img class="logos" src="https://i.imgur.com/pNA2jJ8.png" alt="Nxall">
-            <p>Dos influencers que quieren ser masivamente conocidos a través de Youtube realizando videos hablando 
-                sobre el mundo de los videojuegos y ellos mismos... o haciendo cualquier cosa que les traiga suscriptores 
-                y seguidores a su canal. El ridículo y la diversión estará a la orden del día en sus aventuras de youtubers. 
-                Historieta de humor. Serie 3 tomos auto conclusivos de 30 páginas. .</p>
+            <img class="logos" src="https://i.imgur.com/smsyqsm.png" alt="Metroid">
+            <p>Una de las franquicias más irregulares de Nintendo, pero no por eso menos icónicas. Creando 
+                nuevas formas de jugar en su genero sci-fi e innovando todo el tiempo. Incentiva la exploración 
+                y la curiosidad en cada uno de sus grandes lanzamientos. Juegos que buscan transmitirte un 
+                sentimiento de soledad al estar atrapado en un planeta desconocido lleno de monstruos que solo buscan destruirte. </p>
         </div>
         <div class="tomos">
-            <h2>Tomos</h2>
+            <h2>Juegos destacados</h2>
             <ul>
-                <li><a href="https://i.imgur.com/bV62unT.jpg" target="blank"><img src="https://i.imgur.com/bV62unT.jpg" alt=""></a></li>
-                <li><a href="https://i.imgur.com/RqMxMSv.jpg" target="blank"><img src="https://i.imgur.com/RqMxMSv.jpg" alt=""></a></li>
-                <li><a href="https://i.imgur.com/qDTgLYz.jpg" target="blank"><img src="https://i.imgur.com/qDTgLYz.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/N7EsME1.jpg" target="blank"><img src="https://i.imgur.com/N7EsME1.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/gEQZqTu.jpg" target="blank"><img src="https://i.imgur.com/gEQZqTu.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/YG7A7YD.jpg" target="blank"><img src="https://i.imgur.com/YG7A7YD.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/yt10iuP.jpg" target="blank"><img src="https://i.imgur.com/yt10iuP.jpg" alt=""></a></li>
+                <li><a href="https://i.imgur.com/953ujy0.jpg" target="blank"><img src="https://i.imgur.com/953ujy0.jpg" alt=""></a></li>
             </ul>
         </div>
     </main>
