--- a/views/paginas/redes.ejs
+++ b/views/paginas/redes.ejs
@@ -10,16 +10,16 @@
     <main>
         <div class="redes">
             <div id="facebook" class="redsocial">
-                <a href="https://www.facebook.com/Chonascomics" target="_blank"><img class="logos" src="https://image.flaticon.com/icons/png/512/124/124010.png"></a>
-                <a href="https://www.facebook.com/Chonascomics"><p>Chonascomics</p></a>
+                <a href="https://www.facebook.com/NintendoLatAm" target="_blank"><img class="logos" src="https://image.flaticon.com/icons/png/512/124/124010.png"></a>
+                <a href="https://www.facebook.com/NintendoLatAm"><p>NintendoLatAm</p></a>
             </div>
             <div id="twitter" class="redsocial">
-                <a href="https://twitter.com/ChonascomicsHD" target="_blank"><img class="logos" src="https://i.imgur.com/phTvIHV.jpg"></a>
-                <a href="https://twitter.com/ChonascomicsHD" target="_blank"><p>ChonascomicsHD</p></a>
+                <a href="https://twitter.com/NintendoAmerica" target="_blank"><img class="logos" src="https://i.imgur.com/phTvIHV.jpg"></a>
+                <a href="https://twitter.com/NintendoAmerica" target="_blank"><p>NintendoLatAm</p></a>
             </div>
             <div id="instagram" class="redsocial">
-                <a href="https://www.instagram.com/chonascomics" target="_blank"><img class="logos" src="https://i.imgur.com/aXpJCTi.png"></a>
-                <a href="https://www.instagram.com/chonascomics" target="_blank"><p>Chonascomics</p></a>
+                <a href="https://www.instagram.com/nintendo/?hl=es-la" target="_blank"><img class="logos" src="https://i.imgur.com/aXpJCTi.png"></a>
+                <a href="https://www.instagram.com/nintendo/?hl=es-la" target="_blank"><p>Nintendo</p></a>
             </div>  
         </div>
     </main>
